Fix: error in the data threshold of the coint

--- a/src/eda.ipynb
+++ b/src/eda.ipynb
@@ -1458,7 +1458,7 @@
     "\n",
     "# To store the res\n",
     "results_buffer = []\n",
-    "window_sizes = [5, 6] # The durations on which we test coint\n",
+    "window_sizes = [4, 5, 6] # The durations on which we test coint\n",
     "\n",
     "print(f\"Running Cointegration Tests vs {anchor_ticker}...\")\n",
     "\n",
@@ -1472,7 +1472,7 @@
     "        df_slice = log_prices.loc[start_str:end_str]\n",
     "\n",
     "        # Minimum data threshold \n",
-    "        min_obs = 10\n",
+    "        min_obs = w_size*252*0.8 # We need at least 80% of the window size data, otherwise it's irrelevant\n",
     "        \n",
     "        if len(df_slice) > min_obs:\n",
     "            res_df = coint_test(df=df_slice) # We do the coint test to get the p-value for each ticker\n",
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "db7228b3",
    "metadata": {},
    "outputs": [
@@ -1533,81 +1533,26 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GIS</td>\n",
-       "      <td>0.000936</td>\n",
-       "      <td>-4.570318</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>2022-12-31</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CF</td>\n",
-       "      <td>0.142566</td>\n",
-       "      <td>-2.876454</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>2022-12-31</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PEP</td>\n",
-       "      <td>0.148075</td>\n",
-       "      <td>-2.857493</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>2022-12-31</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>KO</td>\n",
-       "      <td>0.176783</td>\n",
-       "      <td>-2.765878</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>2022-12-31</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>27</th>\n",
-       "      <td>CC=F</td>\n",
-       "      <td>0.197614</td>\n",
-       "      <td>-2.705479</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>CC=F</td>\n",
-       "      <td>0.197614</td>\n",
-       "      <td>-2.705479</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>KO</td>\n",
-       "      <td>0.284693</td>\n",
-       "      <td>-2.487313</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2019-01-01</td>\n",
+       "      <td>MOO</td>\n",
+       "      <td>0.024960</td>\n",
+       "      <td>-3.593490</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2021-01-01</td>\n",
        "      <td>2024-12-31</td>\n",
-       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CC=F</td>\n",
+       "      <td>0.197614</td>\n",
+       "      <td>-2.705479</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54</th>\n",
@@ -1621,6 +1566,28 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>KO</td>\n",
+       "      <td>0.284693</td>\n",
+       "      <td>-2.487313</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>CC=F</td>\n",
+       "      <td>0.332198</td>\n",
+       "      <td>-2.384568</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>55</th>\n",
        "      <td>CC=F</td>\n",
        "      <td>0.332198</td>\n",
@@ -1632,10 +1599,43 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109</th>\n",
+       "      <th>28</th>\n",
+       "      <td>MNST</td>\n",
+       "      <td>0.398019</td>\n",
+       "      <td>-2.251436</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>DBA</td>\n",
+       "      <td>0.401657</td>\n",
+       "      <td>-2.244288</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
        "      <td>CC=F</td>\n",
-       "      <td>0.332198</td>\n",
-       "      <td>-2.384568</td>\n",
+       "      <td>0.450336</td>\n",
+       "      <td>-2.149886</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>LMNR</td>\n",
+       "      <td>0.470395</td>\n",
+       "      <td>-2.111428</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>2019-01-01</td>\n",
@@ -1647,29 +1647,29 @@
        "</div>"
       ],
       "text/plain": [
-       "    Ticker   P-Value    T-Stat  Significant (5%)  Significant (10%)  \\\n",
-       "0      GIS  0.000936 -4.570318              True               True   \n",
-       "1       CF  0.142566 -2.876454             False              False   \n",
-       "2      PEP  0.148075 -2.857493             False              False   \n",
-       "3       KO  0.176783 -2.765878             False              False   \n",
-       "27    CC=F  0.197614 -2.705479             False              False   \n",
-       "81    CC=F  0.197614 -2.705479             False              False   \n",
-       "108     KO  0.284693 -2.487313             False              False   \n",
-       "54      KO  0.284693 -2.487313             False              False   \n",
-       "55    CC=F  0.332198 -2.384568             False              False   \n",
-       "109   CC=F  0.332198 -2.384568             False              False   \n",
+       "   Ticker   P-Value    T-Stat  Significant (5%)  Significant (10%)  \\\n",
+       "27    MOO  0.024960 -3.593490              True               True   \n",
+       "0    CC=F  0.197614 -2.705479             False              False   \n",
+       "54     KO  0.284693 -2.487313             False              False   \n",
+       "81     KO  0.284693 -2.487313             False              False   \n",
+       "82   CC=F  0.332198 -2.384568             False              False   \n",
+       "55   CC=F  0.332198 -2.384568             False              False   \n",
+       "28   MNST  0.398019 -2.251436             False              False   \n",
+       "29    DBA  0.401657 -2.244288             False              False   \n",
+       "30   CC=F  0.450336 -2.149886             False              False   \n",
+       "83   LMNR  0.470395 -2.111428             False              False   \n",
        "\n",
-       "    window_start  window_end  window_size  \n",
-       "0     2018-01-01  2022-12-31            5  \n",
-       "1     2018-01-01  2022-12-31            5  \n",
-       "2     2018-01-01  2022-12-31            5  \n",
-       "3     2018-01-01  2022-12-31            5  \n",
-       "27    2019-01-01  2023-12-31            5  \n",
-       "81    2018-01-01  2023-12-31            6  \n",
-       "108   2019-01-01  2024-12-31            6  \n",
-       "54    2020-01-01  2024-12-31            5  \n",
-       "55    2020-01-01  2024-12-31            5  \n",
-       "109   2019-01-01  2024-12-31            6  "
+       "   window_start  window_end  window_size  \n",
+       "27   2021-01-01  2024-12-31            4  \n",
+       "0    2020-01-01  2023-12-31            4  \n",
+       "54   2020-01-01  2024-12-31            5  \n",
+       "81   2019-01-01  2024-12-31            6  \n",
+       "82   2019-01-01  2024-12-31            6  \n",
+       "55   2020-01-01  2024-12-31            5  \n",
+       "28   2021-01-01  2024-12-31            4  \n",
+       "29   2021-01-01  2024-12-31            4  \n",
+       "30   2021-01-01  2024-12-31            4  \n",
+       "83   2019-01-01  2024-12-31            6  "
       ]
      },
      "metadata": {},
@@ -1679,6 +1679,14 @@
    "source": [
     "display(coint_df.sort_values(by='P-Value').head(10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce106316",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
